I will change how the site looks like

--- a/Style/style.css
+++ b/Style/style.css
@@ -1,3 +1,7 @@
+.background {
+    background-image: url('/image/Idejna\ zasnova.jpg');
+}
+
 .glava {
     position: sticky;
     top: 0;
@@ -7,38 +11,17 @@
     border: 1px solid black;
     border-radius: 8px;
     margin: 0 avto;
-    background-color: rgb(235, 243, 243);
+    background-color: rgba(235, 243, 243, 0);
     height: 150px;
     width: auto;
     padding: 10px;
 }
 
 #profilePicture{
-    order: 1;
-    align-self: flex-start;
-    height: 90%;
-    width: auto;
     border-radius: 50%;
     padding: 5px;
 }
 
-#naslovnaKartica{
-    order: 2;
-    align-self: flex-start;
-    align-items: flex-start;
-}
-#naslov2{
-    list-style-type: none;
-}
-#button1{
-    order: 3;
-    background-color: rgb(67, 127, 216);
-    border: none;
-    border-radius: 30%;
-    color: white;
-    margin: 2%;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
+
+
+
