--- a/Style/style.css
+++ b/Style/style.css
@@ -1,5 +1,5 @@
-.background {
-    background-image: url('/image/Idejna\ zasnova.jpg');
+#background{
+background-image: url('/image/Idejna\ zasnova.jpg');
 }
 
 .glava {
