--- a/Style/style.css
+++ b/Style/style.css
@@ -8,7 +8,14 @@ background-position: center;
 }
 
 h1 {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 60px;
     color: green;
+    text-align: center;
+    text-shadow: 
+    0 0 2px rgb(0, 0, 0),
+    0 0 10px rgb(7, 116, 7);
+    letter-spacing: 12px;
     
 }
 
@@ -40,14 +47,12 @@ ul {
     top: 0;
     display: flex;
     flex-direction: row;
-    justify-content: left;
-    border: 5px solid rgb(218, 28, 193);
+    justify-content: center;
     border-radius: 2px;
     margin: 0 avto;
     height: 150px;
     width: auto;
     padding: 10px;
-    background-color: black;
 }
 
 #profilePicture{
